--- a/server/www/app/webroot/css/style.css
+++ b/server/www/app/webroot/css/style.css
@@ -44,6 +44,7 @@ div#header p#logindetails {
 	font-weight:normal;
 	clear:right;
 	color:#999;
+	margin-top:47px;
 }
 div#contentwrapper {
 	border:1px solid #613aa4;
